--- a/formmain.lfm
+++ b/formmain.lfm
@@ -1,8 +1,216 @@
-object Form1: TForm1
-  Left = 343
-  Height = 240
-  Top = 133
-  Width = 320
-  Caption = 'Form1'
+object MainForm: TMainForm
+  Left = 383
+  Height = 400
+  Top = 252
+  Width = 700
+  Caption = 'AMEnvelope'
+  ClientHeight = 371
+  ClientWidth = 700
+  Menu = MainFormMenu
+  OnCreate = FormCreate
   LCLVersion = '2.0.10.0'
+  object PanelAll: TPanel
+    Left = 8
+    Height = 328
+    Top = 40
+    Width = 682
+    Anchors = [akTop, akLeft, akRight, akBottom]
+    ClientHeight = 328
+    ClientWidth = 682
+    TabOrder = 0
+    object PanelImg: TPanel
+      Left = 1
+      Height = 326
+      Top = 1
+      Width = 335
+      Align = alLeft
+      ClientHeight = 326
+      ClientWidth = 335
+      TabOrder = 0
+      object ListImg: TComboBox
+        Left = 8
+        Height = 31
+        Top = 8
+        Width = 316
+        Anchors = [akTop, akLeft, akRight]
+        ItemHeight = 0
+        ItemIndex = 0
+        Items.Strings = (
+          'Нет картинки'
+        )
+        OnChange = ListImgChange
+        Style = csDropDownList
+        TabOrder = 0
+        Text = 'Нет картинки'
+      end
+      object LabelImgMarginTop: TLabel
+        Left = 8
+        Height = 17
+        Top = 59
+        Width = 90
+        Caption = 'Отступ сверху'
+        ParentColor = False
+      end
+      object LabelImgMarginLeft: TLabel
+        Left = 8
+        Height = 17
+        Top = 97
+        Width = 83
+        Caption = 'Отступ слева'
+        ParentColor = False
+      end
+      object ImgMarginTop: TSpinEdit
+        Left = 192
+        Height = 28
+        Top = 48
+        Width = 128
+        Anchors = [akTop, akRight]
+        MaxValue = 4
+        TabOrder = 1
+        Value = 2
+      end
+      object ImgMarginLeft: TSpinEdit
+        Left = 192
+        Height = 28
+        Top = 86
+        Width = 128
+        Anchors = [akTop, akRight]
+        MaxValue = 2
+        TabOrder = 2
+        Value = 1
+      end
+      object ImgPreview: TImage
+        Left = 8
+        Height = 192
+        Top = 128
+        Width = 312
+        Anchors = [akLeft, akRight, akBottom]
+        Center = True
+        Proportional = True
+      end
+    end
+    object PanelAllSplitter1: TSplitter
+      Left = 336
+      Height = 326
+      Top = 1
+      Width = 10
+    end
+    object PanelText: TPanel
+      Left = 346
+      Height = 326
+      Top = 1
+      Width = 335
+      Align = alClient
+      ClientHeight = 326
+      ClientWidth = 335
+      TabOrder = 2
+      object ListText: TComboBox
+        Left = 8
+        Height = 31
+        Top = 8
+        Width = 320
+        Anchors = [akTop, akLeft, akRight]
+        ItemHeight = 0
+        ItemIndex = 0
+        Items.Strings = (
+          'Нет текста'
+        )
+        OnChange = ListTextChange
+        Style = csDropDownList
+        TabOrder = 0
+        Text = 'Нет текста'
+      end
+      object LabelTextMarginTop: TLabel
+        Left = 8
+        Height = 17
+        Top = 59
+        Width = 90
+        Caption = 'Отступ сверху'
+        ParentColor = False
+      end
+      object LabelTextMarginLeft: TLabel
+        Left = 8
+        Height = 17
+        Top = 97
+        Width = 83
+        Caption = 'Отступ слева'
+        ParentColor = False
+      end
+      object TextMarginTop: TSpinEdit
+        Left = 200
+        Height = 28
+        Top = 48
+        Width = 128
+        Anchors = [akTop, akRight]
+        MaxValue = 4
+        TabOrder = 1
+        Value = 2
+      end
+      object TextMarginLeft: TSpinEdit
+        Left = 200
+        Height = 28
+        Top = 86
+        Width = 128
+        Anchors = [akTop, akRight]
+        MaxValue = 4
+        TabOrder = 2
+        Value = 1
+      end
+      object TextPreview: TImage
+        Left = 8
+        Height = 194
+        Top = 128
+        Width = 320
+        Anchors = [akLeft, akRight, akBottom]
+        Center = True
+        Proportional = True
+      end
+    end
+  end
+  object ButtonPrint: TButton
+    Left = 8
+    Height = 25
+    Top = 8
+    Width = 75
+    Caption = 'Печать'
+    TabOrder = 1
+  end
+  object ButtonPrintPreview: TButton
+    Left = 88
+    Height = 25
+    Top = 8
+    Width = 216
+    Caption = 'Предварительный просмотр'
+    TabOrder = 2
+  end
+  object MainFormMenu: TMainMenu
+    Left = 672
+    object MainFormMenuFile: TMenuItem
+      Caption = 'Файл'
+      object MainFormMenuAddImg: TMenuItem
+        Caption = 'Добавить файлы картинок'
+      end
+      object MainFormMenuAddText: TMenuItem
+        Caption = 'Добавить файлы текста'
+      end
+      object MainFormMenuSep1: TMenuItem
+        Caption = '-'
+      end
+      object MainFormMenuSettings: TMenuItem
+        Caption = 'Параметры'
+      end
+      object MainFormMenuSep2: TMenuItem
+        Caption = '-'
+      end
+      object MainFormMenuExit: TMenuItem
+        Caption = 'Выход'
+      end
+    end
+    object MainFormMenuHelp: TMenuItem
+      Caption = 'Справка'
+      object MainFormMenuAbout: TMenuItem
+        Caption = 'О программе'
+      end
+    end
+  end
 end
