Create the SettingsForm

--- a/formmain.lfm
+++ b/formmain.lfm
@@ -202,6 +202,7 @@ object MainForm: TMainForm
       end
       object MainFormMenuSettings: TMenuItem
         Caption = 'Параметры'
+        OnClick = MainFormMenuSettingsClick
       end
       object MainFormMenuSep2: TMenuItem
         Caption = '-'
