--- a/formmain.lfm
+++ b/formmain.lfm
@@ -7,6 +7,7 @@ object MainForm: TMainForm
   ClientHeight = 371
   ClientWidth = 700
   Menu = MainFormMenu
+  OnClose = FormClose
   OnCreate = FormCreate
   LCLVersion = '2.0.10.0'
   object PanelAll: TPanel
