--- a/formmain.lfm
+++ b/formmain.lfm
@@ -1,10 +1,10 @@
 object MainForm: TMainForm
   Left = 383
-  Height = 400
+  Height = 440
   Top = 252
   Width = 700
   Caption = 'AMEnvelope'
-  ClientHeight = 371
+  ClientHeight = 411
   ClientWidth = 700
   Menu = MainFormMenu
   OnClose = FormClose
@@ -12,20 +12,20 @@ object MainForm: TMainForm
   LCLVersion = '2.0.10.0'
   object PanelAll: TPanel
     Left = 8
-    Height = 328
+    Height = 368
     Top = 40
     Width = 682
     Anchors = [akTop, akLeft, akRight, akBottom]
-    ClientHeight = 328
+    ClientHeight = 368
     ClientWidth = 682
     TabOrder = 0
     object PanelImg: TPanel
       Left = 1
-      Height = 326
+      Height = 366
       Top = 1
       Width = 335
       Align = alLeft
-      ClientHeight = 326
+      ClientHeight = 366
       ClientWidth = 335
       TabOrder = 0
       object ListImg: TComboBox
@@ -66,7 +66,7 @@ object MainForm: TMainForm
         Top = 48
         Width = 128
         Anchors = [akTop, akRight]
-        MaxValue = 4
+        MaxValue = 10
         TabOrder = 1
         Value = 2
       end
@@ -76,33 +76,51 @@ object MainForm: TMainForm
         Top = 86
         Width = 128
         Anchors = [akTop, akRight]
-        MaxValue = 2
+        MaxValue = 15
         TabOrder = 2
         Value = 1
       end
       object ImgPreview: TImage
         Left = 8
         Height = 192
-        Top = 128
+        Top = 168
         Width = 312
         Anchors = [akLeft, akRight, akBottom]
         Center = True
         Proportional = True
       end
+      object LabelImgWidth: TLabel
+        Left = 8
+        Height = 17
+        Top = 136
+        Width = 56
+        Caption = 'Ширина'
+        ParentColor = False
+      end
+      object ImgWidth: TSpinEdit
+        Left = 192
+        Height = 28
+        Top = 128
+        Width = 128
+        Anchors = [akTop, akRight]
+        MaxValue = 15
+        TabOrder = 3
+        Value = 4
+      end
     end
     object PanelAllSplitter1: TSplitter
       Left = 336
-      Height = 326
+      Height = 366
       Top = 1
       Width = 10
     end
     object PanelText: TPanel
       Left = 346
-      Height = 326
+      Height = 366
       Top = 1
       Width = 335
       Align = alClient
-      ClientHeight = 326
+      ClientHeight = 366
       ClientWidth = 335
       TabOrder = 2
       object ListText: TComboBox
@@ -143,7 +161,7 @@ object MainForm: TMainForm
         Top = 48
         Width = 128
         Anchors = [akTop, akRight]
-        MaxValue = 4
+        MaxValue = 10
         TabOrder = 1
         Value = 2
       end
@@ -153,18 +171,36 @@ object MainForm: TMainForm
         Top = 86
         Width = 128
         Anchors = [akTop, akRight]
-        MaxValue = 4
+        MaxValue = 15
         TabOrder = 2
-        Value = 1
+        Value = 7
       end
       object TextPreview: TImage
         Left = 8
         Height = 194
-        Top = 128
+        Top = 168
         Width = 320
         Anchors = [akLeft, akRight, akBottom]
         Center = True
         Proportional = True
+      end
+      object LabelTextWidth: TLabel
+        Left = 8
+        Height = 17
+        Top = 136
+        Width = 56
+        Caption = 'Ширина'
+        ParentColor = False
+      end
+      object TextWidth: TSpinEdit
+        Left = 200
+        Height = 28
+        Top = 128
+        Width = 128
+        Anchors = [akTop, akRight]
+        MaxValue = 15
+        TabOrder = 3
+        Value = 7
       end
     end
   end
